# PolyMORpy

./: .gitignore  LICENSE  README.md  pyproject.toml
AllenCahn1D/: README.md  allen_cahn_examples.py  allen_cahn_jax.py
Heat1D/: README.md  heat1d_examples.py  heat1d_jax.py
Kawahara/: README.md  kawahara_examples.py  kawahara_jax.py
ViscousBurgers1D/: README.md  burgers_examples.py  burgers_jax.py  burgers_test.py
